# demo

./: .gitignore
sondkits/: .gitignore  CMakeLists.txt  audiodecoder.cpp  audiodecoder.h  audiofilter.cpp  audiofilter.h  audioplay.cpp  audioplay.h  audioplayer.cpp  audioplayer.h  audioutils.cpp  audioutils.h  avutils.cpp  avutils.h  common.cpp  common.h  datasource.cpp  datasource.h  decodequeue.cpp  decodequeue.h  main.cpp  mainwindow.cpp  mainwindow.h  pcmdatasource.cpp  pcmdatasource.h
sondkits/3rd/aubio-mac-arm64/lib/: libaubio.dylib
sondkits/3rd/aubio-mac/lib/: libaubio.dylib
sondkits/3rd/ffmpeg-shared-mac-arm64/include/libavcodec/: avcodec.h
sondkits/3rd/ffmpeg-shared-mac-arm64/include/libavutil/: ffversion.h
sondkits/3rd/ffmpeg-shared-mac-arm64/lib/: libavdevice.61.3.100.dylib  libavutil.59.39.100.dylib  libffmpeg.7.dylib  libswresample.5.3.100.dylib  libswscale.8.3.100.dylib
sondkits/3rd/ffmpeg-shared-mac-arm64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
sondkits/src/: audioplay.cpp  audioplay.h  audioplayer.cpp  audioplayer.h
sondkits/src/audiofilter/: audioeffectsfilter.cpp  audioeffectsfilter.h  audiofilter.h
sondkits/src/common/: audioutils.cpp  audioutils.h  common.cpp  common.h
sondkits/src/datasource/: datasource.cpp  datasource.h  decodedatasource.cpp  decodedatasource.h  filedatasource.cpp  filedatasource.h  memorydatasource.cpp  memorydatasource.h
sondkits/src/decode/: audiodecoder.cpp  audiodecoder.h  decodequeue.cpp  decodequeue.h  decoder.h
temp/: CMakeLists.txt  audiodecoder.cpp  audiodecoder.h  audioplayer.cpp  audioplayer.h  build.sh  main.cpp  mainwindow.cpp  mainwindow.h
